Still trying to fix alignment and formatting for navigation.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -37,8 +37,8 @@ nav ul li a {
     font-size: 20px;
     color: #FFFFFF;
     text-transform: uppercase;
-    float: right;
     display: inline;
+    text-align: right;
 }
 
 nav ul li a:hover {
@@ -69,7 +69,7 @@ a:link {
     float: right;
 }
 
-section figure {
+div figure {
     float: none;
 }
 
